--- a/style.css
+++ b/style.css
@@ -186,3 +186,22 @@ h1 {
   margin-right: 5px;
 }
 
+
+.certification {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.certification-icon {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  margin-bottom: 20px;
+}
+
+.certification-name {
+  margin: 0;
+  display: flex;
+  align-items: center;
+}
