--- a/style.css
+++ b/style.css
@@ -163,6 +163,8 @@ margin-right: 10px;
 
 .portfolio_content ul {
 list-style: square;
+margin-top: -30px;
+margin-bottom: -20px;
 }
 
 .portfolio_content strong {
