change nothing just trying to redeploy

--- a/style.css
+++ b/style.css
@@ -211,7 +211,10 @@ align-items: center;
 
 @media (max-width: 768px) {
 
-
+  .box:before,
+  .box:after {
+    display: none;
+  }
 
   .profile-img {
   display:none
