--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   width: 70%;
   margin: 0 auto;
   padding: 20px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: relative;
 }
 
@@ -70,142 +70,143 @@ h1 {
 }
 
 .center {
-display: flex;
-flex-direction: column;
-align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .job-title {
-display: flex;
-align-items: center;
-margin-top: -5px;
+  display: flex;
+  align-items: center;
+  margin-top: -5px;
 }
 
 .job-title p {
-margin: 0;
-font-size: 18px;
-margin-left: 5px;
+  margin: 0;
+  font-size: 18px;
+  margin-left: 5px;
 }
+
 .company-icon {
-width: 20px;
-height: 20px;
-margin-right: 5px;
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
 }
 
 .social-media a i {
-font-size: 30px;
-padding: 10px;
+  font-size: 30px;
+  padding: 10px;
 }
 
 
 
 
 .portfolio_body {
-width: 80%;
-margin: auto;
-display: flex;
-flex-direction: column;
+  width: 80%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .project_collapse {
-background: #fff;
-color: #000;
-font-size: 20px;
-border: none;
-text-align: left;
-cursor: pointer;
-outline: none;
-display: flex;
-align-items: center;
-padding: 10px;
+  background: #fff;
+  color: #000;
+  font-size: 20px;
+  border: none;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+  display: flex;
+  align-items: center;
+  padding: 10px;
 }
 
 .project_collapse:hover {
-background: #f2f2f2;
+  background: #f2f2f2;
 }
 
 .portfolio_content {
-background: #fff;
-padding: 20px;
-display: none;
-flex-grow: 1;
-font-size: 18px;
-line-height: 1.5;
+  background: #fff;
+  padding: 20px;
+  display: none;
+  flex-grow: 1;
+  font-size: 18px;
+  line-height: 1.5;
 }
 
 .portfolio_content p {
-margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .portfolio_content ul {
-margin: 0;
-padding-left: 30px;
-list-style: none;
+  margin: 0;
+  padding-left: 30px;
+  list-style: none;
 }
 
 .project_collapse {
-background: #fff;
-color: #000;
-font-size: 20px;
-border: none;
-text-align: left;
-cursor: pointer;
-outline: none;
-display: flex;
-align-items: center;
-padding: 10px;
-margin-left: -80px;
+  background: #fff;
+  color: #000;
+  font-size: 20px;
+  border: none;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  margin-left: -80px;
 }
 
 .project_collapse i {
-margin-right: 10px;
+  margin-right: 10px;
 }
 
 .portfolio_content ul {
-list-style: square;
-margin-top: -30px;
-margin-bottom: -20px;
+  list-style: square;
+  margin-top: -30px;
+  margin-bottom: -20px;
 }
 
 .portfolio_content strong {
-display: block;
-margin-bottom: 5px;
+  display: block;
+  margin-bottom: 5px;
 }
 
 .portfolio_content .programming-languages {
-display: flex;
-flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .portfolio_content li {
-margin-bottom: 10px;
-display: flex;
-align-items: center;
-margin-left: 90px;
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  margin-left: 90px;
 }
 
 .portfolio_content li i {
-margin-right: 5px;
+  margin-right: 5px;
 }
 
 
 .certification {
-display: flex;
-align-items: center;
-margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 .certification-icon {
-width: 30px;
-height: 30px;
-margin-right: 10px;
-margin-bottom: 20px;
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  margin-bottom: 20px;
 }
 
 .certification-name {
-margin: 0;
-display: flex;
-align-items: center;
+  margin: 0;
+  display: flex;
+  align-items: center;
 }
 
 
@@ -220,33 +221,29 @@ align-items: center;
     display: none;
   }
 
-  .box{
+  .box {
     width: 100%;
     height: 100%;
   }
 
   .profile-img {
-  display:none
+    display: none
   }
+
   .center {
-  align-items: flex-start;
+    align-items: flex-start;
   }
-  
+
   .portfolio_body {
-  width: 100%;
+    width: 100%;
   }
-  
+
   .project_collapse {
-  margin-left: 0;
+    margin-left: 0;
   }
-  
+
   .portfolio_content li {
-  margin-left: 0;
+    margin-left: 0;
   }
-  
- 
 
-  
 }
-
-
