--- a/blogging/blog.css
+++ b/blogging/blog.css
@@ -194,7 +194,14 @@
       font-size: 16px;
     }
 
-    
+    footer {
+      text-align: center;
+      padding: 10px;
+      color: white;
+      font-size: 12px;
+    }
+
+
     /* Responsive styles */
     @media (max-width: 768px) {
       .header {
