making skills section mobile interface friendly :)

--- a/style.css
+++ b/style.css
@@ -307,4 +307,35 @@ footer{
     margin-left: 0;
   }
 
+  .container {
+    flex-direction: column;
+  }
+
+  .languages {
+    margin-top: -35px;
+    margin-left: 0;
+  }
+
+  ul.prog {
+    margin-left: 0;
+  }
+
+  .security-tools {
+    margin-left: 0;
+    margin-top: 20px;
+  }
+
+  ul.sec-tools-values {
+    margin-left: 0;
+  }
+
+  .other-skills {
+    margin-left: 0;
+    margin-top: 20px;
+  }
+
+  ul.other-skills-values {
+    margin-left: 0;
+  }
+
 }
