--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
   z-index: -2;
 }
 
+
 .profile-img {
   width: 150px;
   height: 150px;
@@ -51,6 +52,12 @@ body {
   position: absolute;
   top: 20px;
   left: -75px;
+}
+
+.Introduction{
+  margin-top: -35px;
+  margin-bottom: -95px;
+  margin-left: -4px;
 }
 
 .logo {
