--- a/blogging/blog1.css
+++ b/blogging/blog1.css
@@ -35,6 +35,15 @@ h1 {
     margin: 0;
 }
 
+.footer {
+    text-align: center;
+    font-size: 0.8em;
+    margin-top: 40px;
+    color: #777;
+}
+
+
+
 
 
 
