fixed some of of styling issues with phone

--- a/blogging/blog1.css
+++ b/blogging/blog1.css
@@ -48,6 +48,23 @@ h1 {
     margin-left: 140px;
   }
 
+.Image-caption-village{
+    text-align: center;
+    margin: 0;
+}
+
+
+  @media only screen and (max-width: 480px) {
+    .village-pic {
+        width: 60%;
+        height: 350px;
+        margin-left: 80px;
+
+      }
+
+   
+
+  }
 
 
 
